Add shutdown methode for services by wrapper